did some changes

--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Memory game</title>
 </head>
 
 <body>
 
     <h1>Memory game</h1>
+    <h2>Score: <span class="score-card"></span></h2>
     <div class="container">
+
+    </div>
+    <div class="toasts">
 
     </div>
     <script src="js/main.js"></script>
